frontend/src/components/Map/Maps.module.css
* {
  color: #39364f;
}


.feed_main_container {
  /* width: 100vw; */
  display: flex;
  justify-content: center;
}


.banner {
  width: 100vw;
  position: absolute;
  opacity: 0;
  /* animation: fadeOut 1000ms;
  animation-fill-mode: forwards;
  -webkit-animation: fadeOut 1000ms;
  -moz-animation: fadeOut 1000ms;
  -o-animation: fadeOut 1000ms;
  -ms-animation: fadeOut 1000ms;
  z-index: -9999; */
}

/* @keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-moz-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-webkit-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-o-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-ms-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
} */


.filter_main {
  width: 100vw;
  height: 100px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: fixed;
  top: 75px;
  background-color: #FFFFFF;
  /* z-index: 1; */
  /* animation: mymove 1000ms; */
}


.filter_genre {
  width: 300px;

}

/* .filter_genre {animation-timing-function: ease-out;}

@keyframes mymove {
  0% {top: 400px; }
  100% {top: 0px; }
} */

/* .calendar_format {
  position: fixed;
  z-index: 1;
  background-color: #FFFFFF;
  top: 170px;
  height: 60px;
  width: 100vw;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
} */
  /* opacity: 100;
  animation: fadeIn 2500ms;
  animation-fill-mode: forwards;
  -webkit-animation: fadeIn 2500ms;
  -moz-animation: fadeIn 2500ms;
  -o-animation: fadeIn 2500ms;
  -ms-animation: fadeIn 2500ms; */

/* @keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-moz-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-webkit-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-o-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-ms-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
} */

.month {
  font-size: 24px;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  min-height: 200px;
  /* opacity: 100;
  animation: fadeIn 2500ms;
  animation-fill-mode: forwards;
  -webkit-animation: fadeIn 2500ms;
  -moz-animation: fadeIn 2500ms;
  -o-animation: fadeIn 2500ms;
  -ms-animation: fadeIn 2500ms; */
}

/* @keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-moz-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-webkit-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-o-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

@-ms-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
} */


.month_border {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 800px;
  color: #CCCCCC;
  border-bottom: solid 1px #CCCCCC;
  padding-bottom: 10px;
}
/* .month > span {
} */

.calendar_events {

  /* height: 100px; */
  width: 800px;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: -2;
}

/*****************************/

.maps_page_container {
  position: relative;
  top: 230px;
  /* width: 100vw; */
  /* height: 100vh; */
  display:flex;
  /* z-index: -1; */

}

.maps_page_events {
  width: 50%;
  /* height: 100vh; */
  position: relative;
  margin-left: 100px;
}



.my_regs_main {
  display: flex;
  flex-direction: column;
  width: 100vw;
  align-items: center;

}

.reg_card {
  display: flex;
  flex-direction: row;
  width: 750px;
  height: 200px;
  border-radius: 15px 15px 15px 15px;
  margin: 20px 0px 20px 0px;
  z-index: -1;
}

.reg_card:hover {
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
}
.reg_card_info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
  padding: 10px;
  z-index: -1;
}

.reg_card_info > p {
  margin: 5px;
}

#reg_name {
  font-size: 30px;
  text-decoration: none;
  color: #39364f;
  z-index: -1;
}

#reg_date,
#reg_quantity {
  font-size: 20px;
  text-decoration: none;
  color: #39364f;
  z-index: -1;
}

.my_events_buttons {
  background-color: #C1C8E4;
  margin-top: 15px;
  margin-right: 15px;
  cursor: pointer;
  border: none;
  padding: 5px;
}

.my_events_buttons:hover {
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  border: 1px solid #39364f;
}

.reg_card_img {
  width: 50%;
  justify-self: flex-end;
  border-radius: 15px 0px 0px 15px;
  z-index: -1;

}

.reg_img {
  object-fit: cover;
  height: 100%;
  width: 100%;
  border-radius: 15px 0px 0px 15px;
  z-index: -1;
}

/*********************************/



.map_page_map {
  position:fixed;
  height: 100%;
  width: 50%;
  right: 0;
  top: 175px;
  z-index: -1;
}

.containerStyle {
  width: 100%;
  height: 100%;
};


/***************************/

/* div {
  width: 100px;
  height: 50px;
  background-color: red;
  font-weight: bold;
  position: relative;
  animation: mymove 5s infinite;
} */

/* #div1 {animation-timing-function: linear;} */
/* #div2 {animation-timing-function: ease;} */
/* #div3 {animation-timing-function: ease-in;} */
/* #div5 {animation-timing-function: ease-in-out;} */












/********************/

/* .event_tiles_container{
  width: 90%;
  position: relative;
  display: grid;
  grid-template-columns: 23% 23% 23% 23%;
  gap: 2%;
  margin-top: 25px;
}

.event_card {
  width: 20vw;
  height: 40vh;
  border-radius: 15px;
  overflow: hidden;
  box-shadow: 0px 8px 32px 0px rgba(0,0,0,0.05);

 }

 .event_card:hover {
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}
.event_img_container {
  height: 40%;
  overflow: hidden;

}
 .event_img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }

.event_card_text {
  padding: 15px;
}

.event_card_text > h4 {
  margin: 5px 0px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}


.event_card_text > p {
  margin: 5px 0px;
} */
/* .event_date_link {
  display: flex;
  font-weight: bold;
  text-decoration: none;
  justify-content: center;
  padding: 1em;
  font-size: 12px;
  padding: 5px;
}

.event_loc_link {
  display: flex;
  font-weight: bold;
  text-decoration: none;
  justify-content: center;
  padding: 1em;
  font-size: 12px;
  padding: 5px;
} */






/****************************/

